# backend/app/models/__init__.py
@@ -4,6 +4,7 @@ from .base import Base, TimestampMixin, create_async_sessionmaker
 from .connection import Connection, ConnectionType
 from .node_output_spec import NodeOutputSpec, OutputType
 from .node_run import NodeRun
+from .node_type import NodeType
 from .pipeline import Pipeline
 from .pipeline_run import PipelineRun, RunStatus
 
@@ -19,4 +20,5 @@ __all__ = [
     "NodeRun",
     "NodeOutputSpec",
     "OutputType",
+    "NodeType",
 ]
